[package]
name = "sc-executor"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "A crate that provides means of executing/dispatching calls into the runtime."
documentation = "https://docs.rs/sc-executor"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.12"
schnellru = "0.2"
tracing = "0.1"

codec = { package = "parity-scale-codec", version = "3" }
sc-executor-common = { version = "0.10.0-dev", path = "common" }
sc-executor-wasmtime = { version = "0.10.0-dev", path = "wasmtime" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-externalities = { version = "0.19", path = "../../primitives/externalities" }
sp-io = { version = "23", path = "../../primitives/io" }
sp-panic-handler = { version = "8", path = "../../primitives/panic-handler" }
sp-runtime-interface = { version = "17", path = "../../primitives/runtime-interface" }
sp-trie = { version = "22", path = "../../primitives/trie" }
sp-version = { version = "22", path = "../../primitives/version" }
sp-wasm-interface = { version = "14", path = "../../primitives/wasm-interface" }

[dev-dependencies]
array-bytes = "6"
assert_matches = "1"
wat = "1"
sc-runtime-test = { version = "2", path = "runtime-test" }
substrate-test-runtime = { version = "2", path = "../../test-utils/runtime" }
sp-state-machine = { version = "0.28", path = "../../primitives/state-machine" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
sp-maybe-compressed-blob = { version = "4.1.0-dev", path = "../../primitives/maybe-compressed-blob" }
sc-tracing = { version = "4.0.0-dev", path = "../tracing" }
sp-tracing = { version = "10", path = "../../primitives/tracing" }
tracing-subscriber = "0.2"
paste = "1"
regex = "1"
criterion = "0.4"
env_logger = "0.10"
num_cpus = "1"
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# This crate does not have `no_std` support, we just require this for tests
std = []
wasm-extern-trace = []
