[package]
description = "Gossiping for the Substrate network protocol"
name = "sc-network-gossip"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-gossip"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ahash = "0.8.3"
futures = "0.3"
futures-timer = "3"
libp2p = "0.50"
log = "0.4"
lru = "0.9"
tracing = "0.1.37"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus" }
sc-network = { version = "0.10.0-dev", path = "../network/" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" }
sc-peerset = { version = "4.0.0-dev", path = "../peerset" }
sp-runtime = { version = "7", path = "../../primitives/runtime" }

[dev-dependencies]
tokio = "1"
quickcheck = { version = "1.0.3", default-features = false }
substrate-test-runtime-client = { version = "2", path = "../../test-utils/runtime/client" }
