[package]
description = "Substrate network protocol"
name = "sc-network"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "6"
async-channel = "1"
async-trait = "0.1"
asynchronous-codec = "0.6"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
either = "1"
fnv = "1"
futures = "0.3"
futures-timer = "3"
ip_network = "0.4"
libp2p = { version = "0.51", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
linked_hash_set = "0.1"
log = "0.4"
mockall = "0.11"
parking_lot = "0.12"
partial_sort = "0.2"
pin-project = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "1"
unsigned-varint = { version = "0.7", features = ["futures", "asynchronous_codec"] }
zeroize = "1"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus" }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sc-network-common = { version = "0.10.0-dev", path = "./common" }
sc-utils = { version = "4.0.0-dev", path = "../utils" }
sp-arithmetic = { version = "16", path = "../../primitives/arithmetic" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
wasm-timer = "0.2"

[dev-dependencies]
assert_matches = "1"
mockall = "0.11"
multistream-select = "0.12"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-test = "0.4"
sc-network-light = { version = "0.10.0-dev", path = "./light" }
sc-network-sync = { version = "0.10.0-dev", path = "./sync" }
sp-test-primitives = { version = "2", path = "../../primitives/test-primitives" }
sp-tracing = { version = "10", path = "../../primitives/tracing" }
substrate-test-runtime = { version = "2", path = "../../test-utils/runtime" }
substrate-test-runtime-client = { version = "2", path = "../../test-utils/runtime/client" }

[features]
default = []
