[package]
description = "Connectivity manager based on reputation"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-peerset"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-peerset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3"
libp2p-identity = { version = "0.1", features = ["peerid", "ed25519"] }
log = "0.4"
parking_lot = "0.12"
partial_sort = "0.2"
serde_json = "1"
wasm-timer = "0.2"
sc-utils = { version = "4.0.0-dev", path = "../utils" }
sp-arithmetic = { version = "6", path = "../../primitives/arithmetic" }

[dev-dependencies]
sp-tracing = { version = "6", path = "../../primitives/tracing" }
mockall = "0.11"
rand = "0.8"
