[package]
name = "sc-rpc-api"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-rpc = { version = "6", path = "../../primitives/rpc" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
sp-version = { version = "22", path = "../../primitives/version" }
jsonrpsee = { version = "0.16.2", features = ["server", "client-core", "macros"] }
