[package]
name = "sc-rpc"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate Client RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
futures = "0.3"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4"
parking_lot = "0.12.1"
serde_json = "1"
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" }
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sc-rpc-api = { version = "0.10.0-dev", path = "../rpc-api" }
sc-tracing = { version = "4.0.0-dev", path = "../tracing" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" }
sc-utils = { version = "4.0.0-dev", path = "../utils" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-keystore = { version = "0.27", path = "../../primitives/keystore" }
sp-offchain = { version = "4.0.0-dev", path = "../../primitives/offchain" }
sp-rpc = { version = "6", path = "../../primitives/rpc" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
sp-session = { version = "4.0.0-dev", path = "../../primitives/session" }
sp-version = { version = "22", path = "../../primitives/version" }

tokio = "1"

[dev-dependencies]
env_logger = "0.10"
assert_matches = "1.5.0"
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" }
sc-network = { version = "0.10.0-dev", path = "../network" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
tokio = "1"
sp-io = { version = "23", path = "../../primitives/io" }
substrate-test-runtime-client = { version = "2", path = "../../test-utils/runtime/client" }
pretty_assertions = "1"

[features]
test-helpers = []
