[package]
name = "sc-statement-store"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate statement store."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"
parking_lot = "0.12"
parity-db = "0.4"
tokio = { version = "1.22", features = ["time"] }
sp-statement-store = { version = "4.0.0-dev", path = "../../primitives/statement-store" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
sc-client-api = { version = "4.0.0-dev", path = "../api" }

[dev-dependencies]
tempfile = "3"
env_logger = "0.9"
