[package]
name = "sc-tracing"
version = "4.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Instrumentation implementation for substrate."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anstyle = "1"
is-terminal = "0.4"
chrono = "0.4"
lazy_static = "1"
libc = "0.2"
log = { version = "0.4" }
parking_lot = "0.12"
regex = "1"
rustc-hash = "1"
serde = "1"
thiserror = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sc-tracing-proc-macro = { version = "4.0.0-dev", path = "./proc-macro" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21", path = "../../primitives/core" }
sp-rpc = { version = "6", path = "../../primitives/rpc" }
sp-runtime = { version = "24", path = "../../primitives/runtime" }
sp-tracing = { version = "10", path = "../../primitives/tracing" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
