[package]
name = "frame-benchmarking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Macro for benchmarking a FRAME runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false }
linregress = { version = "0.5", optional = true }
log = { version = "0.4", default-features = false }
paste = "1"
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-support-procedural = { version = "4.0.0-dev", default-features = false, path = "../support/procedural" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-application-crypto = { version = "23", default-features = false, path = "../../primitives/application-crypto" }
sp-core = { version = "21", default-features = false, path = "../../primitives/core" }
sp-io = { version = "23", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "24", default-features = false, path = "../../primitives/runtime" }
sp-runtime-interface = { version = "17", default-features = false, path = "../../primitives/runtime-interface" }
sp-std = { version = "8", default-features = false, path = "../../primitives/std" }
sp-storage = { version = "13", default-features = false, path = "../../primitives/storage" }
static_assertions = "1.1.0"

[dev-dependencies]
array-bytes = "6"
rusty-fork = { version = "0.3", default-features = false }
sp-keystore = { version = "0.27", path = "../../primitives/keystore" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"linregress",
	"log/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-storage/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
