[package]
name = "frame-support"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Support code for the runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-metadata = { version = "16", default-features = false, features = ["current"] }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api", features = [ "frame-metadata" ] }
sp-std = { version = "8", default-features = false, path = "../../primitives/std" }
sp-io = { version = "23", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "24", default-features = false, path = "../../primitives/runtime" }
sp-tracing = { version = "10", default-features = false, path = "../../primitives/tracing" }
sp-core = { version = "21", default-features = false, path = "../../primitives/core" }
sp-arithmetic = { version = "16", default-features = false, path = "../../primitives/arithmetic" }
sp-inherents = { version = "4.0.0-dev", default-features = false, path = "../../primitives/inherents" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
sp-weights = { version = "20", default-features = false, path = "../../primitives/weights" }
sp-debug-derive = { default-features = false, path = "../../primitives/debug-derive" }
tt-call = "1"
macro_magic = "0.4"
frame-support-procedural = { version = "4.0.0-dev", default-features = false, path = "./procedural" }
paste = "1"
sp-state-machine = { version = "0.28", default-features = false, optional = true, path = "../../primitives/state-machine" }
bitflags = "1"
impl-trait-for-tuples = "0.2"
smallvec = "1"
log = { version = "0.4", default-features = false }
sp-core-hashing-proc-macro = { version = "9", path = "../../primitives/core/hashing/proc-macro" }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
environmental = { version = "1.1.4", default-features = false }

[dev-dependencies]
serde_json = "1"
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
frame-system = { version = "4.0.0-dev", path = "../system" }
array-bytes = "6.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"k256/std",
	"serde/std",
	"sp-api/std",
	"sp-io/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-tracing/std",
	"sp-arithmetic/std",
	"frame-metadata/std",
	"sp-inherents/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-weights/std",
	"frame-support-procedural/std",
	"log/std",
	"environmental/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks"
]
try-runtime = [
	"sp-debug-derive/force-debug"
]
experimental = []
# By default some types have documentation, `no-metadata-docs` allows to reduce the documentation
# in the metadata.
no-metadata-docs = ["frame-support-procedural/no-metadata-docs", "sp-api/no-metadata-docs"]
# By default some types have documentation, `full-metadata-docs` allows to add documentation to
# more types in the metadata.
full-metadata-docs = ["scale-info/docs"]
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = ["frame-support-procedural/tuples-96"]
tuples-128 = ["frame-support-procedural/tuples-128"]
