[package]
name = "sp-keystore"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Keystore primitives."
documentation = "https://docs.rs/sp-core"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
futures = "0.3"
parking_lot = { version = "0.12", default-features = false }
thiserror = "1"
sp-core = { version = "7", default-features = false, path = "../core" }
sp-externalities = { version = "0.13", default-features = false, path = "../externalities" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-externalities/std",
]

# This feature adds BLS crypto primitives. It should not be used in production since
# the BLS implementation and interface may still be subject to significant change.
bls-experimental = ["sp-core/bls-experimental"]
