[package]
name = "sp-mmr-primitives"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Merkle Mountain Range primitives."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.5", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5", default-features = false }
serde = { version = "1", features = ["derive", "alloc"], default-features = false, optional = true }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-core = { version = "21", default-features = false, path = "../core" }
sp-debug-derive = { version = "8", default-features = false, path = "../debug-derive" }
sp-runtime = { version = "24", default-features = false, path = "../runtime" }
sp-std = { version = "8", default-features = false, path = "../std" }
thiserror = "1.0"

[dev-dependencies]
array-bytes = "6"

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"mmr-lib/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-debug-derive/std",
	"sp-runtime/std",
	"sp-std/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
