[package]
name = "sp-runtime"
version = "24.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime Modules shared primitive types."
documentation = "https://docs.rs/sp-runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
either = { version = "1", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
impl-trait-for-tuples = "0.2"
log = { version = "0.4", default-features = false }
paste = "1"
rand = { version = "0.8", optional = true }
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
sp-application-crypto = { version = "23", default-features = false, path = "../application-crypto" }
sp-arithmetic = { version = "16", default-features = false, path = "../arithmetic" }
sp-core = { version = "21", default-features = false, path = "../core" }
sp-io = { version = "23", default-features = false, path = "../io" }
sp-std = { version = "8", default-features = false, path = "../std" }
sp-weights = { version = "20", default-features = false, path = "../weights" }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
zstd = { version = "0.12", default-features = false }
sp-api = { version = "4.0.0-dev", path = "../api" }
sp-state-machine = { version = "0.28", path = "../state-machine" }
sp-tracing = { version = "10", path = "../../primitives/tracing" }
substrate-test-runtime-client = { version = "2", path = "../../test-utils/runtime/client" }

[features]
runtime-benchmarks = []
try-runtime = []
default = ["std"]
std = [
	"codec/std",
	"either/use_std",
	"hash256-std-hasher/std",
	"log/std",
	"rand",
	"scale-info/std",
	"serde/std",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-weights/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-arithmetic/serde",
	"sp-core/serde",
	"sp-weights/serde",
]
