[package]
name = "sp-storage"
version = "13.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Storage related primitives"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sp-storage/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
impl-serde = { version = "0.4", default-features = false, optional = true }
ref-cast = "1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
sp-debug-derive = { version = "8", default-features = false, path = "../debug-derive" }
sp-std = { version = "8", default-features = false, path = "../std" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"impl-serde/std",
	"serde/std",
	"sp-debug-derive/std",
	"sp-std/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"impl-serde",
]
