[package]
name = "sp-trie"
version = "7.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Patricia trie stuff using a parity-scale-codec node format"
repository = "https://github.com/paritytech/substrate/"
license = "Apache-2.0"
edition = "2021"
homepage = "https://substrate.io"
documentation = "https://docs.rs/sp-trie"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
name = "bench"
harness = false

[dependencies]
ahash = { version = "0.8.3", optional = true }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
hashbrown = { version = "0.13.2", optional = true }
hash-db = { version = "0.16.0", default-features = false }
lazy_static = { version = "1", optional = true }
memory-db = { version = "0.32.0", default-features = false }
nohash-hasher = { version = "0.2.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
thiserror = { version = "1", optional = true }
tracing = { version = "0.1.37", optional = true }
trie-db = { version = "0.27.1", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
sp-core = { version = "7", default-features = false, path = "../core" }
sp-std = { version = "5", default-features = false, path = "../std" }
schnellru = { version = "0.2.1", optional = true }

[dev-dependencies]
array-bytes = "4.2"
criterion = "0.4.0"
trie-bench = "0.37.0"
trie-standardmap = "0.16.0"
sp-runtime = { version = "7", path = "../runtime" }

[features]
default = ["std"]
std = [
	"ahash",
	"codec/std",
	"hashbrown",
	"hash-db/std",
	"lazy_static",
	"schnellru",
	"memory-db/std",
	"nohash-hasher",
	"parking_lot",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"thiserror",
	"tracing",
	"trie-db/std",
	"trie-root/std",
]
